add aop to controller
